Pandas dataframe created #3

--- a/my_gp2.ipynb
+++ b/my_gp2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled67.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOIXqIm5R6Y/Pw22rZyrnR5",
+      "authorship_tag": "ABX9TyNoS/k8X2gtEnuI6cCR0rtt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -626,10 +626,138 @@
     {
       "cell_type": "code",
       "source": [
+        "data = {'Title': titles_list,\n",
+        "        'Content': congrats_list}\n",
+        "\n",
+        "my_df = pd.DataFrame(data)\n",
+        "my_df"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 422
+        },
+        "id": "D4S_hWq2QK7k",
+        "outputId": "f46880a6-28a7-4666-8019-183c8f86cd03"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Title</th>\n",
+              "      <th>Content</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Эдварду Радзинскому, писателю, драматургу, сце...</td>\n",
+              "      <td>Уважаемый Эдвард Станиславович!Примите поздра...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Коллективу радиостанции «Орфей»</td>\n",
+              "      <td>Дорогие друзья!Поздравляю вас со знаменательн...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Михаилу Ковальчуку, президенту НИЦ «Курчатовск...</td>\n",
+              "      <td>Уважаемый Михаил Валентинович!Примите мои поз...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Ирине Андреевой и Ивану Штылю, победителям чем...</td>\n",
+              "      <td>Уважаемые Ирина Александровна и Иван Александ...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Работникам и ветеранам оборонно-промышленного ...</td>\n",
+              "      <td>Уважаемые друзья!Поздравляю вас с Днём оружей...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>883</th>\n",
+              "      <td>Жителям Республики Мордовия</td>\n",
+              "      <td>Дорогие друзья!Поздравляю вас с юбилеем – 75-...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>884</th>\n",
+              "      <td>Коллективу Института физических проблем им.П.Л...</td>\n",
+              "      <td>Поздравляю коллектив института с 70-летием со...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>885</th>\n",
+              "      <td>Жителям Красноярского края</td>\n",
+              "      <td>Уважаемые друзья!Поздравляю вас с 70-летием с...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>886</th>\n",
+              "      <td>В.А.ЛОГИНОВУ</td>\n",
+              "      <td>Уважаемый Владимир Александрович!Поздравляю В...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>887</th>\n",
+              "      <td>Патриарху Московскому и всея Руси Алексию II</td>\n",
+              "      <td>Ваше Святейшество!От всего сердца поздравляю ...</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>888 rows × 2 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                                                 Title                                            Content\n",
+              "0    Эдварду Радзинскому, писателю, драматургу, сце...   Уважаемый Эдвард Станиславович!Примите поздра...\n",
+              "1                      Коллективу радиостанции «Орфей»   Дорогие друзья!Поздравляю вас со знаменательн...\n",
+              "2    Михаилу Ковальчуку, президенту НИЦ «Курчатовск...   Уважаемый Михаил Валентинович!Примите мои поз...\n",
+              "3    Ирине Андреевой и Ивану Штылю, победителям чем...   Уважаемые Ирина Александровна и Иван Александ...\n",
+              "4    Работникам и ветеранам оборонно-промышленного ...   Уважаемые друзья!Поздравляю вас с Днём оружей...\n",
+              "..                                                 ...                                                ...\n",
+              "883                        Жителям Республики Мордовия   Дорогие друзья!Поздравляю вас с юбилеем – 75-...\n",
+              "884  Коллективу Института физических проблем им.П.Л...   Поздравляю коллектив института с 70-летием со...\n",
+              "885                         Жителям Красноярского края   Уважаемые друзья!Поздравляю вас с 70-летием с...\n",
+              "886                                       В.А.ЛОГИНОВУ   Уважаемый Владимир Александрович!Поздравляю В...\n",
+              "887       Патриарху Московскому и всея Руси Алексию II   Ваше Святейшество!От всего сердца поздравляю ...\n",
+              "\n",
+              "[888 rows x 2 columns]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "D4S_hWq2QK7k"
+        "id": "dFf2RVPGU1ZD"
       },
       "execution_count": null,
       "outputs": []
