fine tuned test version of model (1 epoch small batch size) #3

--- a/my_gpt2.ipynb
+++ b/my_gpt2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled67.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMeWXYUAOumxE8DrIsgdKuP",
+      "authorship_tag": "ABX9TyPTNCrfQKf6l5RVoZRPz/qA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -905,12 +905,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 256
+          "height": 385
         },
         "id": "LYVx4OsGk3DP",
         "outputId": "45fb5eed-69bb-4dca-968a-41131c080f03"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -949,8 +949,8 @@
               "\n",
               "    <div>\n",
               "      \n",
-              "      <progress value='7' max='106' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-              "      [  7/106 01:45 < 34:44, 0.05 it/s, Epoch 0.06/1]\n",
+              "      <progress value='106' max='106' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+              "      [106/106 36:46, Epoch 1/1]\n",
               "    </div>\n",
               "    <table border=\"1\" class=\"dataframe\">\n",
               "  <thead>\n",
@@ -968,6 +968,27 @@
             ]
           },
           "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n",
+            "\n",
+            "Training completed. Do not forget to share your model on huggingface.co/models =)\n",
+            "\n",
+            "\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "TrainOutput(global_step=106, training_loss=2.6467241970997937, metrics={'train_runtime': 2236.7975, 'train_samples_per_second': 0.567, 'train_steps_per_second': 0.047, 'total_flos': 82894897152000.0, 'train_loss': 2.6467241970997937, 'epoch': 1.0})"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
         }
       ]
     },
@@ -977,46 +998,246 @@
         "trainer.save_model()"
       ],
       "metadata": {
-        "id": "h_hdlyW_k61Z"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "h_hdlyW_k61Z",
+        "outputId": "9c5ac74c-ff9a-410c-91a5-90752b25390f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Saving model checkpoint to ./gpt-letters\n",
+            "Configuration saved in ./gpt-letters/config.json\n",
+            "Model weights saved in ./gpt-letters/pytorch_model.bin\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "def generate(\n",
-        "    model, tok, text,\n",
-        "    do_sample=True, max_length=50, repetition_penalty=5.0,\n",
-        "    top_k=5, top_p=0.95, temperature=1,\n",
-        "    num_beams=None,\n",
-        "    no_repeat_ngram_size=3\n",
-        "    ):\n",
-        "  input_ids = tok.encode(text, return_tensors=\"pt\").cuda()\n",
-        "  out = model.generate(\n",
-        "      input_ids.cuda(),\n",
-        "      max_length=max_length,\n",
-        "      repetition_penalty=repetition_penalty,\n",
-        "      do_sample=do_sample,\n",
-        "      top_k=top_k, top_p=top_p, temperature=temperature,\n",
-        "      num_beams=num_beams, no_repeat_ngram_size=no_repeat_ngram_size\n",
-        "      )\n",
-        "  return list(map(tok.decode, out))"
+        "# my_model = torch.load('./gpt-letters/pytorch_model.bin')\n",
+        "from transformers import pipeline\n",
+        "\n",
+        "pu = pipeline('text-generation',model='./gpt-letters', tokenizer=tokenizer, max_length=800)"
       ],
       "metadata": {
-        "id": "mUizYI4HlGHb"
+        "id": "0BQfswfh3XXc",
+        "outputId": "a6a37e4a-9eef-4b91-81af-81863bbbbcac",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "loading configuration file ./gpt-letters/config.json\n",
+            "Model config GPT2Config {\n",
+            "  \"_name_or_path\": \"./gpt-letters\",\n",
+            "  \"activation_function\": \"gelu_new\",\n",
+            "  \"architectures\": [\n",
+            "    \"GPT2LMHeadModel\"\n",
+            "  ],\n",
+            "  \"attn_pdrop\": 0.1,\n",
+            "  \"bos_token_id\": 50256,\n",
+            "  \"embd_pdrop\": 0.1,\n",
+            "  \"eos_token_id\": 50256,\n",
+            "  \"gradient_checkpointing\": false,\n",
+            "  \"initializer_range\": 0.02,\n",
+            "  \"layer_norm_epsilon\": 1e-05,\n",
+            "  \"model_type\": \"gpt2\",\n",
+            "  \"n_ctx\": 2048,\n",
+            "  \"n_embd\": 768,\n",
+            "  \"n_head\": 12,\n",
+            "  \"n_inner\": null,\n",
+            "  \"n_layer\": 12,\n",
+            "  \"n_positions\": 2048,\n",
+            "  \"reorder_and_upcast_attn\": false,\n",
+            "  \"resid_pdrop\": 0.1,\n",
+            "  \"scale_attn_by_inverse_layer_idx\": false,\n",
+            "  \"scale_attn_weights\": true,\n",
+            "  \"summary_activation\": null,\n",
+            "  \"summary_first_dropout\": 0.1,\n",
+            "  \"summary_proj_to_labels\": true,\n",
+            "  \"summary_type\": \"cls_index\",\n",
+            "  \"summary_use_proj\": true,\n",
+            "  \"torch_dtype\": \"float32\",\n",
+            "  \"transformers_version\": \"4.14.1\",\n",
+            "  \"use_cache\": true,\n",
+            "  \"vocab_size\": 50264\n",
+            "}\n",
+            "\n",
+            "loading configuration file ./gpt-letters/config.json\n",
+            "Model config GPT2Config {\n",
+            "  \"_name_or_path\": \"./gpt-letters\",\n",
+            "  \"activation_function\": \"gelu_new\",\n",
+            "  \"architectures\": [\n",
+            "    \"GPT2LMHeadModel\"\n",
+            "  ],\n",
+            "  \"attn_pdrop\": 0.1,\n",
+            "  \"bos_token_id\": 50256,\n",
+            "  \"embd_pdrop\": 0.1,\n",
+            "  \"eos_token_id\": 50256,\n",
+            "  \"gradient_checkpointing\": false,\n",
+            "  \"initializer_range\": 0.02,\n",
+            "  \"layer_norm_epsilon\": 1e-05,\n",
+            "  \"model_type\": \"gpt2\",\n",
+            "  \"n_ctx\": 2048,\n",
+            "  \"n_embd\": 768,\n",
+            "  \"n_head\": 12,\n",
+            "  \"n_inner\": null,\n",
+            "  \"n_layer\": 12,\n",
+            "  \"n_positions\": 2048,\n",
+            "  \"reorder_and_upcast_attn\": false,\n",
+            "  \"resid_pdrop\": 0.1,\n",
+            "  \"scale_attn_by_inverse_layer_idx\": false,\n",
+            "  \"scale_attn_weights\": true,\n",
+            "  \"summary_activation\": null,\n",
+            "  \"summary_first_dropout\": 0.1,\n",
+            "  \"summary_proj_to_labels\": true,\n",
+            "  \"summary_type\": \"cls_index\",\n",
+            "  \"summary_use_proj\": true,\n",
+            "  \"torch_dtype\": \"float32\",\n",
+            "  \"transformers_version\": \"4.14.1\",\n",
+            "  \"use_cache\": true,\n",
+            "  \"vocab_size\": 50264\n",
+            "}\n",
+            "\n",
+            "loading weights file ./gpt-letters/pytorch_model.bin\n",
+            "All model checkpoint weights were used when initializing GPT2LMHeadModel.\n",
+            "\n",
+            "All the weights of GPT2LMHeadModel were initialized from the model checkpoint at ./gpt-letters.\n",
+            "If your task is similar to the task the model of the checkpoint was trained on, you can already use GPT2LMHeadModel for predictions without further training.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "generated = generate(model, tok, \"Александру Сергеевичу Пушкину\", num_beams=10)\n",
-        "generated[0]"
+        "pu(\"Александру Сергеевичу Пушкину\")[0]['generated_text']"
       ],
       "metadata": {
-        "id": "L11uTP24s9JS"
+        "id": "U1npn-k-5olF",
+        "outputId": "7e8e4071-e9cc-4003-fcc8-b4570f65932f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 199
+        }
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'Александру Сергеевичу Пушкину, поэту, драматургу, драматургу, режиссёру, заслуженному деятелю искусств РФ, лауреату Государственной премии СССР, почётному гражданину Санкт-Петербурга, почётному гражданину Москвы, почётному граждану Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга, почётному гражданину Санкт-Петербурга'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "pu(\"Кровавым убийцам детей\")[0]['generated_text']"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "id": "mUizYI4HlGHb",
+        "outputId": "36e73e36-d5b4-4428-e34f-5076d94bd7e2"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'Кровавым убийцам детей и внуков.Желаю Вам здоровья, благополучия и всего самого доброго'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pu(\"Уважаемые осквернители святынь и насильники\")[0]['generated_text']"
+      ],
+      "metadata": {
+        "id": "Lk-tHC1939g-",
+        "outputId": "f90c3965-64c6-40ee-a93c-613798b7f533",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        }
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'Уважаемые осквернители святынь и насильники, осквернители святынь и насильники!Поз'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "jSo8B_fZ6MW2"
       },
       "execution_count": null,
       "outputs": []
