Added some generated results

--- a/my_gpt2.ipynb
+++ b/my_gpt2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled67.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPTNCrfQKf6l5RVoZRPz/qA",
+      "authorship_tag": "ABX9TyPkb+kLSWJsXMGdMyxAPr4R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1026,11 +1026,11 @@
         "pu = pipeline('text-generation',model='./gpt-letters', tokenizer=tokenizer, max_length=800)"
       ],
       "metadata": {
-        "id": "0BQfswfh3XXc",
-        "outputId": "a6a37e4a-9eef-4b91-81af-81863bbbbcac",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0BQfswfh3XXc",
+        "outputId": "a6a37e4a-9eef-4b91-81af-81863bbbbcac"
       },
       "execution_count": 50,
       "outputs": [
@@ -1125,12 +1125,12 @@
         "pu(\"Александру Сергеевичу Пушкину\")[0]['generated_text']"
       ],
       "metadata": {
-        "id": "U1npn-k-5olF",
-        "outputId": "7e8e4071-e9cc-4003-fcc8-b4570f65932f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 199
-        }
+        },
+        "id": "U1npn-k-5olF",
+        "outputId": "7e8e4071-e9cc-4003-fcc8-b4570f65932f"
       },
       "execution_count": 51,
       "outputs": [
@@ -1159,18 +1159,17 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
         "pu(\"Кровавым убийцам детей\")[0]['generated_text']"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 199
         },
         "id": "mUizYI4HlGHb",
-        "outputId": "36e73e36-d5b4-4428-e34f-5076d94bd7e2"
+        "outputId": "f60a291d-3742-43b8-bf47-0f74833fc712"
       },
-      "execution_count": 48,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
@@ -1186,11 +1185,11 @@
               "type": "string"
             },
             "text/plain": [
-              "'Кровавым убийцам детей и внуков.Желаю Вам здоровья, благополучия и всего самого доброго'"
+              "'Кровавым убийцам детей и внуков.Желаю Вам здоровья, благополучия и всего самого доброго. Владимир Путин     Статус материала Опубликован в разделе: Телеграммы  Ссылка на материал: kremlin.ru/d/6496   Текстовая версия <EOS>\\n<BOS> Уважаемый Владимир Владимирович!Поздравляю Вас с Днём рождения.Вы – яркий, самобытный, самобытный учёный, талантливый учёный, человек, который внес значительный вклад в развитие отечественной науки и техники. Вы – яркий, самобытный, самобытный учёный, человек, который внес значительный вклад в развитие отечественной науки и техники.Владимир Путин     Статус материала Опубликован в разделе: Телеграммы  Ссылка на материал: kremlin.ru/d/6496   Текстовая версия <EOS>\\n<BOS> Уважаемый Владимир Владимирович!Поздравляю Вас с Днём рождения.Вы – яркий, самобытный, самобытный, самобытный учёный, человек, который внес значительный вклад в развитие отечественной науки и техники. Вы – яркий, самобытный, самобытный, самобытный учёный, человек, который внес значительный вклад в развитие отечественной науки и техники.Владимир Путин     Статус материала Опубликован в разделе: Телеграммы  Ссылка на материал: kremlin.ru/d/6496   Текстовая версия <EOS>\\n<BOS> Уважаемый Владимир Владимирович!Поздравляю Вас с Днём рождения.Вы – яркий, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобытный, самобы'"
             ]
           },
           "metadata": {},
-          "execution_count": 48
+          "execution_count": 52
         }
       ]
     },
@@ -1200,14 +1199,14 @@
         "pu(\"Уважаемые осквернители святынь и насильники\")[0]['generated_text']"
       ],
       "metadata": {
-        "id": "Lk-tHC1939g-",
-        "outputId": "f90c3965-64c6-40ee-a93c-613798b7f533",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
-        }
+          "height": 199
+        },
+        "id": "Lk-tHC1939g-",
+        "outputId": "dfedd37d-e3ed-4901-982c-64fc9f553073"
       },
-      "execution_count": 49,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
@@ -1223,11 +1222,11 @@
               "type": "string"
             },
             "text/plain": [
-              "'Уважаемые осквернители святынь и насильники, осквернители святынь и насильники!Поз'"
+              "'Уважаемые осквернители святынь и насильники, осквернители святынь и насильники!Поздравляю вас с победой на выборах в Государственную Думу.Вы продемонстрировали высокий уровень политической зрелости, продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры, продемонстрировали высокий уровень политической культуры.Вы продемонстрировали высокий уровень политической культуры'"
             ]
           },
           "metadata": {},
-          "execution_count": 49
+          "execution_count": 53
         }
       ]
     },
